--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
    - docker build -t brahmav/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-   - docker run brahmav/react-test npm test -- --coverage
+   - docker run -e CI=true brahmav/react-test npm test
 
 
 after_success:
