--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+language: generic
 sudo: required
 services:
     - docker
@@ -7,7 +8,6 @@ before_install:
 
 script:
    - docker run -e CI=true brahmav/react-test npm test
-
 
 after_success:
    - docker build -t brahmav/multi-client ./client
