--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language: generic
 sudo: required
 services:
-    - docker
+   - docker
 
 before_install:
    - docker build -t brahmav/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-   - docker run -e CI=true brahmav/react-test npm test
-
+   - docker run -e CI=true brahmav/react-test npm run test
+   
 after_success:
    - docker build -t brahmav/multi-client ./client
    - docker build -t brahmav/multi-nginx ./nginx
@@ -21,4 +21,4 @@ after_success:
    - docker push brahmav/multi-nginx
    - docker push brahmav/multi-server
    - docker push brahmav/multi-worker
-
+   
