--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "node ./node_modules/react-scripts/.bin/react-scripts.js test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
